--- a/assets/css/steven-css.css
+++ b/assets/css/steven-css.css
@@ -2,7 +2,7 @@
        * element that contains the map. */
 #map {
     height: 400px;
-    width: 600px;
+    width: 100%;
 }
       /* Optional: Makes the sample page fill the window. */
 html, body {
