Implimented css styling via external styling that was formly done via inline styling

--- a/assets/css/steven-css.css
+++ b/assets/css/steven-css.css
@@ -2,12 +2,13 @@
        * element that contains the map. */
 #map {
     height: 400px;
-    width: 400px;
 }
       /* Optional: Makes the sample page fill the window. */
-html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    
+
+.card-header {
+    background-color:lightgrey;
+}
+
+body {
+    background-color: rgb(77, 177, 160);
 }
